--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <title>我的简历</title>
   <link rel="stylesheet" href="./style.css">
-  <script src="//at.alicdn.com/t/font_1232437_xklyvmfzwfs.js"></script>
+  <script src="//at.alicdn.com/t/font_1232437_wmnqd48qo3.js"></script>
 </head>
 <body>
   <div class="layout">
@@ -63,7 +63,7 @@
             <dd>286084845@qq.com</dd>
             <dt>
               <svg class="icon" aria-hidden="true">
-                  <use xlink:href="#icon-weixin"></use>
+                  <use xlink:href="#icon-wechat"></use>
               </svg>
             </dt>
             <dd>dong286084845</dd>
