增加 知乎 和 GitHub 按钮

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <base target="_blank">
   <title>我的简历</title>
   <link rel="stylesheet" href="./style.css">
   <script src="//at.alicdn.com/t/font_1232437_wmnqd48qo3.js"></script>
@@ -21,10 +22,12 @@
         <section class="information">
           <h2>基础信息</h2>
           <dl>
+            <dt>出生日期<span>:</span></dt>
+            <dd>1995-11-16</dd>
             <dt>学历<span>:</span></dt>
             <dd>大专</dd>
             <dt>工作经验<span>:</span></dt>
-            <dd>1年</dd>
+            <dd>自学1年</dd>
             <dt>意向薪资<span>:</span></dt>
             <dd>8k~10k</dd>
           </dl>
@@ -74,6 +77,11 @@
             </dt>
             <dd>上海</dd>
           </dl>
+        </section>
+
+        <section class="blog">
+          <a class="zhihu" href="https://www.zhihu.com/people/dongdong12138/activities">我的知乎</a>
+          <a class="github" href="https://github.com/dongdong12138">我的 GitHub</a>
         </section>
       </div>
     </aside>
