--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <dl>
             <dt>出生日期<span>:</span></dt>
             <dd>1995-11-16</dd>
-            <dt>学历<span>:</span></dt>
+            <dt><i>学历</i><span>:</span></dt>
             <dd>大专</dd>
             <dt>工作经验<span>:</span></dt>
             <dd>自学1年</dd>
