--- a/index.html
+++ b/index.html
@@ -201,6 +201,23 @@
                 </li>
               </ul>
             </dd>
+
+            <dt style="margin-top: 14px;">轻项目</dt>
+            <dd>
+              <ul>
+                <li>
+                  <a href="https://dongdong12138.github.io/canvas/index.html">canvas 画板</a>（PC端、移动端）
+                </li>
+                <li>
+                  <a href="https://dongdong12138.github.io/keyboard-nav/index.html">键盘导航</a>（PC端）
+                </li>
+                <li>
+                  <a href="https://dongdong12138.github.io/Pikachu/index.html">皮卡丘</a>（移动端）
+                </li>
+                <li>
+                </li>
+              </ul>
+            </dd>
           </dl>
         </section>
 
