add Chrome-translator 插件

--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
                   <a href="https://dongdong12138.github.io/Pikachu/index.html">皮卡丘</a>（移动端）
                 </li>
                 <li>
+                  <a href="https://github.com/dongdong12138/chrome-translator">董董翻译</a>（Chrome 划词翻译插件）
                 </li>
               </ul>
             </dd>
