个人评价 改成 个人经历

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         </section>
         
         <section>
-          <h2>个人评价</h2>
+          <h2>个人经历</h2>
           <p>
             2016年7月毕业于南昌理工学院，毕业前于南昌档案馆实习（具体工作内容需保密）。<br>
             2017年9月于上海在教育培训机构任职至今。<br>
