简历部分修改

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <dt><i>学历</i><span>:</span></dt>
             <dd>大专</dd>
             <dt>工作经验<span>:</span></dt>
-            <dd>自学1年</dd>
+            <dd>2年</dd>
             <dt>意向薪资<span>:</span></dt>
-            <dd>8k~10k</dd>
+            <dd>13k~15k</dd>
           </dl>
         </section>
         
@@ -37,14 +37,18 @@
           <h2>专业技能</h2>
           <dl>
             <dt>HTML5</dt>
-            <dd><i style="width: 50%"></i></dd>
+            <dd><i style="width: 80%"></i></dd>
             <dt>CSS3</dt>
-            <dd><i style="width: 70%"></i></dd>
+            <dd><i style="width: 80%"></i></dd>
             <dt>JavaScript</dt>
-            <dd><i style="width: 40%"></i></dd>
+            <dd><i style="width: 60%"></i></dd>
             <dt>jQuery</dt>
-            <dd><i style="width: 75%"></i></dd>
+            <dd><i style="width: 40%"></i></dd>
             <dt>Vue</dt>
+            <dd><i style="width: 70%"></i></dd>
+            <dt>React</dt>
+            <dd><i style="width: 70%"></i></dd>
+            <dt>小程序</dt>
             <dd><i style="width: 80%"></i></dd>
           </dl>
         </section>
@@ -81,7 +85,9 @@
 
         <section class="blog">
           <a class="zhihu" href="https://www.zhihu.com/people/dongdong12138/activities">我的知乎</a>
+          <a class="juejin" href="https://juejin.cn/user/1855631360790110">我的掘金</a>
           <a class="github" href="https://github.com/dongdong12138">我的 GitHub</a>
+          <a class="gitee" href="https://gitee.com/barrydong">我的 Gitee</a>
           <a class="online" href="https://github.com/dongdong12138/resume-flex">查看在线简历</a>
         </section>
       </div>
@@ -137,7 +143,6 @@
               <ul>
                 <li>Git、GitHub</li>
                 <li>命令行</li>
-                <li>BootStrap</li>
                 <li>WebPack</li>
                 <li>Sass</li>
                 <li>Web性能优化</li>
