--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <p>应聘前端工程师</p>
   </header>
 
-  <!-- 个人信息及工作经历概述 -->
+  <!-- 个人信息、工作经历 -->
   <main>
 
     <!-- 个人信息 -->
@@ -48,21 +48,26 @@
       <section class="skills">
         <h3>工作技能</h3>
         <dl>
-          <dt>HTML5</dt>
-          <dd><i style="width: 90%"></i></dd>
-          <dt>CSS3</dt>
+          <dt>HTML/CSS</dt>
           <dd><i style="width: 90%"></i></dd>
           <dt>JavaScript</dt>
           <dd><i style="width: 80%"></i></dd>
-          <dt>TypeScript</dt>
-          <dd><i style="width: 50%"></i></dd>
-          <dt>jQuery</dt>
-          <dd><i style="width: 40%"></i></dd>
-          <dt>Vue</dt>
+<!--          <dt>TypeScript</dt>-->
+<!--          <dd><i style="width: 50%"></i></dd>-->
+          <dt>Vue2/Vue3</dt>
+          <dd><i style="width: 80%"></i></dd>
+          <dt>React</dt>
           <dd><i style="width: 80%"></i></dd>
           <dt>小程序</dt>
           <dd><i style="width: 80%"></i></dd>
         </dl>
+      </section>
+      <section class="blog">
+        <a class="mySite" href="https://dongdong12138.github.io/">我的网站</a>
+        <a class="zhihu" href="https://www.zhihu.com/people/dongdong12138/activities">我的知乎</a>
+        <a class="juejin" href="https://juejin.cn/user/1855631360790110">我的掘金</a>
+        <a class="github" href="https://github.com/dongdong12138">我的 GitHub</a>
+        <a class="gitee" href="https://gitee.com/barrydong">我的 Gitee</a>
       </section>
       <section class="hobby">
         <h3>兴趣爱好</h3>
@@ -84,19 +89,13 @@
       <!--      <section class="information">-->
       <!--        <h2>基础信息</h2>-->
       <!--        <dl>-->
-      <!--          <dt>出生日期<span>:</span></dt>-->
-      <!--          <dd>1995-11-16</dd>-->
       <!--          <dt><i>学历</i><span>:</span></dt>-->
       <!--          <dd>大专</dd>-->
-      <!--          <dt>工作经验<span>:</span></dt>-->
-      <!--          <dd>2年</dd>-->
-      <!--          <dt>意向薪资<span>:</span></dt>-->
-      <!--          <dd>13k~15k</dd>-->
       <!--        </dl>-->
       <!--      </section>-->
     </div>
 
-    <!-- 工作经历概述 -->
+    <!-- 工作经历 -->
     <div class="summary">
       <section>
         <div class="summary-title">
@@ -174,7 +173,7 @@
     <!--              </li>-->
     <!--              <li>-->
     <!--                <strong>项目特色：拍摄用户脸部肌肤、保存海报、音乐播放等。</strong>-->
-    <!--              </li>-->>
+    <!--              </li>-->
     <!--              <li class="tip">-->
     <!--                温馨提示：点击左侧图片，使用淘宝APP扫描二维码即可预览项目。-->
     <!--              </li>-->
@@ -210,13 +209,7 @@
 
 
 
-  <!--      <section class="blog">-->
-  <!--        <a class="zhihu" href="https://www.zhihu.com/people/dongdong12138/activities">我的知乎</a>-->
-  <!--        <a class="juejin" href="https://juejin.cn/user/1855631360790110">我的掘金</a>-->
-  <!--        <a class="github" href="https://github.com/dongdong12138">我的 GitHub</a>-->
-  <!--        <a class="gitee" href="https://gitee.com/barrydong">我的 Gitee</a>-->
-  <!--        <a class="online" href="https://github.com/dongdong12138/resume-flex">查看在线简历</a>-->
-  <!--      </section>-->
+
   <!--    </div>-->
   <!--  </aside>-->
 
