--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
 
   <!-- 顶部 -->
   <header>
-    <h1>董浩</h1>
-    <p>应聘前端工程师</p>
+    <h1>Barry Dong</h1>
+    <p>Personal Resume</p>
   </header>
 
   <!-- 个人信息、工作经历 -->
@@ -62,13 +62,13 @@
           <dd><i style="width: 80%"></i></dd>
         </dl>
       </section>
-      <section class="blog">
-        <a class="mySite" href="https://dongdong12138.github.io/">我的网站</a>
-        <a class="zhihu" href="https://www.zhihu.com/people/dongdong12138/activities">我的知乎</a>
-        <a class="juejin" href="https://juejin.cn/user/1855631360790110">我的掘金</a>
-        <a class="github" href="https://github.com/dongdong12138">我的 GitHub</a>
-        <a class="gitee" href="https://gitee.com/barrydong">我的 Gitee</a>
-      </section>
+<!--      <section class="blog">-->
+<!--        <a class="mySite" href="https://dongdong12138.github.io/">我的网站</a>-->
+<!--        <a class="zhihu" href="https://www.zhihu.com/people/dongdong12138/activities">我的知乎</a>-->
+<!--        <a class="juejin" href="https://juejin.cn/user/1855631360790110">我的掘金</a>-->
+<!--        <a class="github" href="https://github.com/dongdong12138">我的 GitHub</a>-->
+<!--        <a class="gitee" href="https://gitee.com/barrydong">我的 Gitee</a>-->
+<!--      </section>-->
       <section class="hobby">
         <h3>兴趣爱好</h3>
         <div class="hobby-item">
@@ -109,17 +109,17 @@
             <span>2022.07 ~ 2023.08</span><span>上海欧睿供应链管理有限公司</span><span>前端开发</span>
           </div>
           <ul class="company-work">
-            <li>负责项目：IMO 智能商品运营系统、APO 选款下单系统</li>
-            <li>技术栈：Vue2、Vue Router、Vuex、Axios、SCSS、ElementUI、vxe-table、ECharts 等</li>
+            <li><strong>负责项目</strong>：IMO 智能商品运营系统、APO 选款下单系统</li>
+            <li><strong>技术栈</strong>：Vue2、Vue Router、Vuex、Axios、SCSS、ElementUI、vxe-table、ECharts 等</li>
             <li>
-              项目概述：
+              <strong>项目概述</strong>：
               <ul>
                 <li>IMO 智能商品运营系统主要针对大型化妆品、鞋服类公司，根据基础数据、业务数据，进行算法预测完成补调、补仓任务，并为客户提供数据。灵活配置不同的商品运营场景及策略，进行分货/预分货/配货/补货、采购下单/店店调拨/仓仓调拨，保证更科学合理地分货和及时调拨。</li>
                 <li>APO 选款下单系统主要针对大型化妆品、鞋服类商品，进行评级组包、初单计算、店货匹配、销售单等一系列完整流程。实现客户总部和区域间选款订货协同，实现更精准的订单与需求匹配。</li>
               </ul>
             </li>
             <li>
-              工作职责：
+              <strong>工作职责</strong>：
               <ul>
                 <li>开发后台管理系统的前端页面，并与后端联调接口</li>
                 <li>根据测试在禅道提出的 BUG 优先级处理 BUG，判断 BUG 产生原因，并按时修复 BUG</li>
@@ -134,10 +134,10 @@
             <span>2019.09 ~ 2020.04</span><span>上海莫凡信息技术有限公司</span><span>前端开发</span>
           </div>
           <ul class="company-work">
-            <li>项目类型：H5、淘宝小程序</li>
-            <li>技术栈：Vue2、Vuex、Axios、淘宝小程序</li>
+            <li><strong>项目类型</strong>：H5、淘宝小程序</li>
+            <li><strong>技术栈</strong>：Vue2、Vuex、Axios、淘宝小程序</li>
             <li>
-              项目概述：
+              <strong>项目概述</strong>：
               <ul>
                 <li>以下皆为淘宝小程序项目，投放于淘宝 APP 相关店铺首页（现已下线），主要用于为店铺引流，获取到更多用户及会员，并为参与互动并符合条件的用户进行抽奖。</li>
                 <li>总有美好会发生【星巴克】：活动期间，用户进入小程序并注册成为会员，即可书写“星意”祝福语分享给其他淘宝用户，被分享者刮开“星意”（刮刮卡效果），分享者即可获得抽奖码。在直播当天，驻场星巴克直播间，配合主播为用户抽奖。</li>
@@ -146,7 +146,7 @@
               </ul>
             </li>
             <li>
-              工作职责：
+              <strong>工作职责</strong>：
               <ul>
                 <li>对项目进行需求分析，与客户、PM 沟通可行性方案</li>
                 <li>还原设计师提供的设计稿，开发前端页面、功能及特效</li>
