项目重构-增加自学项目

--- a/src/index.html
+++ b/src/index.html
@@ -105,7 +105,7 @@
         </div>
         <div class="section-content">
           <ul>
-            <li><strong>HTML：</strong>编写代码时遵循 HTML 语义化，熟悉 HTML5 一些新增的标签及属性，有 Canvas、SVG 使用经验</li>
+            <li><strong>HTML：</strong>编写代码时遵循 HTML 语义化原则，熟悉 HTML5 中一些新增的标签及属性，有 Canvas、SVG 使用经验</li>
             <li><strong>CSS：</strong>熟练使用 Flex、Grid 布局，熟悉 CSS 中的盒模型、BFC、边距塌陷等特性，有 CSS3 动画、媒体查询等实战经验</li>
             <li><strong>Sass：</strong>熟练使用嵌套、变量、mixin、继承等语法，可结合 BEM 命名规范清晰结构层级关系，提高 CSS 代码可读性</li>
             <li><strong>JavaScript：</strong>熟悉 JS 的核心概念和 ES6 语法，能够合理运用模块化组织代码，对于 DOM、BOM 也有实际操作经验</li>
@@ -371,10 +371,32 @@
             </li>
           </ul>
         </div>
+        <div class="section-content">
+          <div class="study-title"><span>轻项目</span></div>
+          <ul>
+            <li>
+              <a href="https://dongdong12138.github.io/canvas/index.html">canvas 画板</a>（PC端、移动端）
+            </li>
+<!--            <li>-->
+<!--              <strong>项目概述：</strong>-->
+<!--              <ul>-->
+<!--                <li>该项目是使用 Vue2 搭建的一个电商型网站，包含了主流电商网站的一些主要业务，如搜索商品、注册登录、购物车、微信支付、产品放大镜等</li>-->
+<!--              </ul>-->
+<!--            </li>-->
+<!--            <li><strong>遇到的问题及解决方案：</strong><a href="https://www.yuque.com/barrydong/qu6n03">点击查看项目笔记</a></li>-->
+<!--            <li>-->
+<!--              <strong>项目源码：</strong>-->
+<!--              <a href="https://github.com/dongdong12138/shangpinhui">点击查看(GitHub)</a> |-->
+<!--              <a href="https://gitee.com/barrydong/shangpinhui">点击查看(Gitee)</a>-->
+<!--            </li>-->
+          </ul>
+        </div>
       </section>
     </div>
 
   </footer>
+
+
 
   <!--          <dt>Vue 实现</dt>-->
   <!--          <dd>-->
@@ -516,7 +538,7 @@
   <!--          <dd>-->
   <!--            <ul>-->
   <!--              <li>-->
-  <!--                <a href="https://dongdong12138.github.io/canvas/index.html">canvas 画板</a>（PC端、移动端）-->
+  <!--                -->
   <!--              </li>-->
   <!--              <li>-->
   <!--                <a href="https://dongdong12138.github.io/keyboard-nav/index.html">键盘导航</a>（PC端）-->
