--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
             <li>熟练使用 HTML5、CSS3 进行页面结构的搭建及页面动画的开发，有 Canvas、SVG 使用经验</li>
             <li>熟练使用 SCSS 编写样式，能够结合 BEM 命名规范清晰结构层级关系，提高 CSS 代码可读性</li>
             <li>熟练使用 JavaScript 及 ES6 新特性，习惯利用 ES Module 合理组织代码</li>
-            <li>可以使用 Webpack 处理 HTML、样式、JS、图片、字体等资源，配置开发服务器，熟悉 Webpack 常见优化方案</li>
+            <li>可以使用 Webpack 处理常见资源，配置开发服务器，熟悉 Webpack 常见优化方案</li>
             <li>熟练使用 Vue 全家桶，有丰富的 Vue2 项目开发经验，具备封装通用组件的能力，以及基于 ElementUI 进行二次封装的能力，并在 npm 上有发布开源组件</li>
             <li>熟悉 Vue3 新特性及一些常用的 Composition API，能够自定义 hook 函数，提高代码可读性和复用性，有 Vue3 移动端项目经验</li>
             <li>熟练使用 Git 管理代码，能够快速解决团队协作中代码冲突的问题</li>
